like button alignment css fix

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,7 +5,7 @@
   height: 100%;
   min-height: 100%;
   padding-bottom: 60px;
-  background-color: #dde1e7;
+  background-color: #d1d8ec;
 }
 
 .nav-line {
