--- a/frontend/src/components/content/Content.css
+++ b/frontend/src/components/content/Content.css
@@ -4,7 +4,6 @@
     height: 45rem;
     display: inline-block;
     position: relative;
-    background-color: #e0e0e0;
 
     border-radius: 15px;
     padding: 1%;
@@ -13,19 +12,21 @@
     overflow: hidden;
     margin: 0;
 
+
 }
 
 .container-border{
-    margin-bottom: 20px;
+    margin-bottom: 25px;
     width: 65.3rem;
     height: 45.3rem;
     border-radius: 15px;
+    background-color: #d1d8ec;
+
     /* background: linear-gradient(-90deg, #f35a5a, #2153f5, #f35a5a);
 	background-size: 400% 400%;
 	animation: gradient 13s ease infinite; */
 
-    box-shadow: 20px 20px 60px #bebebec0,
-                -20px -20px 60px #ffffff;
+    box-shadow: 12px 12px 24px #b2b8c9, -12px -12px 24px #f0f8ffa1;
 
     display:flex;
     justify-content:center;
